--- a/src/styles.css
+++ b/src/styles.css
@@ -148,6 +148,20 @@ a {
 	text-align: center;
 }
 
+.list_update textarea{
+	font-size: 20px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	/* border: none; */
+	resize: none;
+	width: 100%;
+	outline-width: 0;
+	padding-left: 10px;
+	padding-top: 5px;
+	overflow: visible;
+
+}
+
 .list_update .hashtag{
 	border: 1px solid palegreen;
 	border-radius: 20px;
